Serilog 설정 (미완료) 비동기 테스트 API 컨트롤러 생성 (미완료)

--- a/src/application/appsettings.Local.json
+++ b/src/application/appsettings.Local.json
@@ -6,7 +6,7 @@
         }
     },
     "Serilog": {
-        "Using": [ "Serilog.Sinks.Async", "Serilog.Sinks.Console" ],
+        "Using": [ "Serilog.Sinks.Console" ],
         "MinimumLevel": {
             "Default": "Verbose",
             "Override": {
