--- a/src/application/application.csproj
+++ b/src/application/application.csproj
@@ -8,7 +8,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Models" />
+      <Folder Include="Services" />
     </ItemGroup>
 
 </Project>
