docker-compose.yml에서 Dockerfile 경로 수정 appesttings 파일 오타 수정 async api 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: aspnetcore-base-project
     build:
       context: .
-      dockerfile: src/application/Dockerfile
+      dockerfile: ./src/application/Dockerfile
     ports:
       - "5000:5000"
     environment:
@@ -18,9 +18,4 @@ services:
           memory: 2gb
     volumes:
       - ./log:/var/log
-#    links:
-#      - redis
-#    
-#  redis:
-#    image: redis
     
