--- a/src/application/appsettings.Development.json
+++ b/src/application/appsettings.Development.json
@@ -1,10 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Async", "Serilog.Sinks.Console" ],
     "MinimumLevel": {
@@ -39,7 +33,7 @@
       "SQS": "9324"
     },
     "SQS": {
-      "SampleServiceQueueUrl": "http://127.0.0.1:9324/queue/smaple-dev-sqs-backend-queue",
+      "SampleServiceQueueUrl": "http://127.0.0.1:9324/queue/smaple-dev-sqs-backend-queue"
     }
   }
 }
