--- a/src/application/appsettings.Local.json
+++ b/src/application/appsettings.Local.json
@@ -1,10 +1,4 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
     "Serilog": {
         "Using": [ "Serilog.Sinks.Console" ],
         "MinimumLevel": {
@@ -39,7 +33,7 @@
             "SQS": "9324"
         },
         "SQS": {
-            "SampleServiceQueueUrl": "http://127.0.0.1:9324/queue/smaple-local-sqs-backend-queue",
+            "SampleServiceQueueUrl": "http://127.0.0.1:9324/queue/smaple-local-sqs-backend-queue"
         }
     }
 }
