--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.9"
 services:
   api:
     image: aspnetcore-base-project
+    container_name: aspnetcore-base-project-api
     build:
       context: .
       dockerfile: ./src/application/Dockerfile
@@ -19,3 +20,12 @@ services:
     volumes:
       - ./log:/var/log
     
+  db:
+    image: mysql:8.0.29-oracle
+    container_name: aspnetcore-base-project-mysql
+    ports:
+      - "3306:3306"
+    environment:
+      - "MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD-mysql1234}"
+    volumes:
+      - "${MYSQL_VOLUMES-~/Docker/aspnetcore-base-project/mysql/data}:/var/lib/mysql"
