--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -17,4 +17,8 @@
       <None Remove="docker-compose.yml" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
