API Nullable Test API 작성 Log Property 추가

--- a/src/Application/appsettings.Local.json
+++ b/src/Application/appsettings.Local.json
@@ -12,10 +12,14 @@
             {
                 "Name": "Console",
                 "Args": {
-                    "outputTemplate": "{Timestamp:o} [{Level:u}] [{Application} Ver.{Version}] [{SourceContext:l}] {Message:lj}{NewLine}{JsonData}{NewLine}{Exception}"
+                    "outputTemplate": "{Timestamp:o} [{Level:u}] [{Application} Ver.{Version}] [{SourceContext:l}] {Message:lj}{NewLine}{LogProperty}{NewLine}{Exception}"
                 }
             }
-        ]
+        ],
+        "Enrich": ["FromLogContext"],
+        "Properties": {
+            "LogProperty": ""
+        }
     },
     "ConnectionStrings": {
         "SampleDBConnection": "server=127.0.0.1;port=3306;database=SampleDB;user=sample_user;password=sample1234!;"
