--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -21,4 +21,8 @@
       <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\Test\DiTest" />
+    </ItemGroup>
+
 </Project>
