aws secret manager 적용 전 커밋

--- a/src/Application/appsettings.Development.json
+++ b/src/Application/appsettings.Development.json
@@ -22,13 +22,13 @@
         }
     },
     "ConnectionStrings": {
-        "SampleDBConnection": "server=127.0.0.1;port=3306;database=SampleDB;user=sample_user;password=sample1234!;"
+        "KwonMooseAccountsConnection": "server=127.0.0.1;port=3306;database=kwonmoose_accounts_dev;user=kwonmoose_dev;password=kwonmoose_dev_1234;"
     },
     "Url": {
         "Sample": "https://dev-api.sample.com"
     },
     "AWS": {
-        "Profile": "default",
+        "Profile": "kwonmoose",
         "Region": "ap-northeast-2"
     },
     "AWSServiceConfiguration": {
