--- a/src/Application/Properties/launchSettings.json
+++ b/src/Application/Properties/launchSettings.json
@@ -9,13 +9,22 @@
         }
     },
     "profiles": {
-        "application": {
+        "Local": {
             "commandName": "Project",
             "dotnetRunMessages": true,
             "launchBrowser": false,
             "applicationUrl": "http://localhost:5000",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Local"
+            }
+        },
+        "Dev": {
+            "commandName": "Project",
+            "dotnetRunMessages": true,
+            "launchBrowser": false,
+            "applicationUrl": "http://localhost:5000",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
             }
         }
     }
