--- a/src/Application/appsettings.Local.json
+++ b/src/Application/appsettings.Local.json
@@ -22,13 +22,13 @@
         }
     },
     "ConnectionStrings": {
-        "SampleDBConnection": "server=127.0.0.1;port=3306;database=SampleDB;user=sample_user;password=sample1234!;"
+        "KwonMooseAccountsConnection": "server=127.0.0.1;port=3306;database=kwonmoose_accounts_local;user=kwonmoose_local;password=kwonmoose_local_1234;"
     },
     "Url": {
         "Sample": "https://local-api.sample.com"
     },
     "AWS": {
-        "Profile": "default",
+        "Profile": "kwonmoose",
         "Region": "ap-northeast-2"
     },
     "AWSServiceConfiguration": {
