aws secrets manager 연동 완료

--- a/src/Application/appsettings.Development.json
+++ b/src/Application/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
     "Serilog": {
-        "Using": [ "Serilog.Sinks.Async", "Serilog.Sinks.Console" ],
+        "Using": [ "Serilog.Sinks.Console" ],
         "MinimumLevel": {
             "Default": "Verbose",
             "Override": {
@@ -21,23 +21,11 @@
             "LogProperty": ""
         }
     },
-    "ConnectionStrings": {
-        "KwonMooseAccountsConnection": "server=127.0.0.1;port=3306;database=kwonmoose_accounts_dev;user=kwonmoose_dev;password=kwonmoose_dev_1234;"
-    },
     "Url": {
         "Sample": "https://dev-api.sample.com"
     },
     "AWS": {
         "Profile": "kwonmoose",
         "Region": "ap-northeast-2"
-    },
-    "AWSServiceConfiguration": {
-        "LocalIp": "http://127.0.0.1",
-        "Port": {
-            "SQS": "9324"
-        },
-        "SQS": {
-            "SampleServiceQueueUrl": "http://127.0.0.1:9324/queue/smaple-dev-sqs-backend-queue"
-        }
     }
 }
