--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -10,7 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.2" />
-        <PackageReference Include="AWSSDK.SecretsManager.Caching" Version="1.0.5" />
+        <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.102.12" />
         <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
