--- a/src/Application/appsettings.Local.json
+++ b/src/Application/appsettings.Local.json
@@ -36,6 +36,7 @@
         "Port": {
             "SQS": "9324"
         },
+        "SecretName": "kwonmoose/local/aspnetcore-base-project",
         "SQS": {
             "SampleServiceQueueUrl": "http://127.0.0.1:9324/queue/smaple-local-sqs-backend-queue"
         }
